Fixed abolute layout issue

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,29 +1,34 @@
 .header-container {
-  position: absolute;
-  top: 15px;
-  left: 21px;
-  display: flex;
-  background-color: rgba(#e57c1e,.3);
-  border: 1px solid white;
-  border-radius: 15px;
-  z-index: 4;
-
-  .menu-btn {
-    background-color: #fff;
-    border-radius: 10px;
-  }
-
-  .search-form {
-    background-color: #fff;
+  position: relative;
+  
+  .search {
+    position: absolute;
+    top: 15px;
+    left: 21px;
     display: flex;
-    align-items: center;
-    margin-left: 10px;
-    border-radius: 10px;
-
-    ion-icon {
-      font-size: 20px;
+    background-color: rgba(#e57c1e,.3);
+    border: 1px solid white;
+    border-radius: 15px;
+    z-index: 4;
+  
+    .menu-btn {
+      background-color: #fff;
+      border-radius: 10px;
     }
+  
+    .search-form {
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      margin-left: 10px;
+      border-radius: 10px;
+  
+      ion-icon {
+        font-size: 20px;
+      }
   }
+  }
+
 }
 
 
